# GENY

./: .env.docker  .gitignore  CHAT_STREAMING_DEEP_ANALYSIS.md  README.md  VTUBER_CHAT_STREAM_REPORT.md  docker-compose.dev-core.yml  docker-compose.dev.yml  docker-compose.prod-core.yml  docker-compose.prod.yml  docker-compose.yml  logs.html
backend/: .dockerignore  .env.example  Dockerfile  check_syntax.py  main.py  pyproject.toml  requirements.txt
backend/controller/: _tool_descriptions_ko.py  admin_controller.py  agent_controller.py  catalog_controller.py  chat_controller.py  claude_controller.py  command_controller.py  config_controller.py  curated_knowledge_controller.py  env_defaults_controller.py  environment_controller.py  framework_settings_controller.py  mcp_custom_controller.py  mcp_oauth_controller.py  permission_controller.py  shared_folder_controller.py  skills_controller.py  subagent_type_controller.py  tool_controller.py  tts_controller.py  user_opsidian_controller.py  vtuber_controller.py  workflow_controller.py
backend/prompts/: README.md  README_KO.md  developer.md  manager.md  planner.md  researcher.md  self-manager.md  vtuber.md  worker.md
backend/prompts/templates/: cli-default.md  cli-detailed.md  developer-ai-engineer.md  developer-backend.md  developer-frontend.md  developer-fullstack.md  researcher-market-analysis.md  researcher-tech-trends.md  vtuber-cheerful.md  vtuber-default.md  vtuber-professional.md
backend/prompts/vtuber_characters/: README.md  default.md
backend/service/: mcp_loader.py  tool_loader.py
backend/service/affect/: taxonomy.py
backend/service/agent_types/: __init__.py  registry.py
backend/service/artifact/: __init__.py  schemas.py  service.py
backend/service/chat/: inbox.py
backend/service/claude_manager/: models.py  process_manager.py  session_manager.py  session_store.py
backend/service/database/: memory_db_helper.py  session_db_helper.py
backend/service/emit/: affect_tag_emitter.py  chain_install.py
backend/service/env_defaults/: __init__.py  service.py
backend/service/environment/: __init__.py  service.py  templates.py
backend/service/execution/: agent_executor.py
backend/service/executor/: agent_session.py  agent_session_manager.py  tool_bridge.py
backend/service/langgraph/: __init__.py  agent_session.py  agent_session_manager.py  autonomous_graph.py  claude_cli_model.py  default_manifest.py  resilience_nodes.py  state.py
backend/service/lifecycle/: __init__.py  bus.py  events.py
backend/service/logging/: __init__.py  session_logger.py  tool_detail_formatter.py
backend/service/memory/: curated_knowledge.py  curation_engine.py  curation_scheduler.py  index.py  interaction_event.py  manager.py  memory_llm.py  structured_writer.py  user_opsidian.py
backend/service/memory_provider/: config.py  registry.py
backend/service/notifications/: __init__.py  install.py
backend/service/permission/: install.py
backend/service/persona/: __init__.py  blocks.py  character_provider.py  dynamic_builder.py
backend/service/plugin/: __init__.py  protocol.py  registry.py  tamagotchi.py
backend/service/progression/: selector.py
backend/service/prompt/: protocols.py  sections.py  template_loader.py
backend/service/settings/: install.py  known_sections.py  sections.py
backend/service/shared_folder/: __init__.py  shared_folder_manager.py
backend/service/skills/: __init__.py  install.py
backend/service/state/: __init__.py  hydrator.py  registry.py
backend/tool_presets/: preset-tool-search-full.json
backend/tools/: _mcp_server.py  _proxy_mcp_server.py  base.py
backend/ws/: chat_stream.py
data/: README.md
(+569 files in other folders)
