[project]
name = "geny"
version = "1.0.1"
description = "Geny (Geny Execute, Not You) - Autonomous Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    # Vector search
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
    # File pattern matching
    "pathspec>=0.12.0",
    # PostgreSQL database
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    # Web search
    "ddgs==9.11.4",
    # Web fetch & browser automation
    "playwright>=1.49.0",
    # WebSocket protocol
    "websockets>=13.0",
    # Bumped to 1.3.0 for new-executor-uplift Cycle D phase 5
    # (Workspace value object + WorkspaceStack; Worktree/LSP tools
    # workspace-aware; SubagentTypeOrchestrator threads workspace
    # snapshot to sub-pipelines).
    # 1.3.1 lands the default-model bump from claude-sonnet-4-20250514
    # to claude-sonnet-4-6 across ModelConfig / PipelineState /
    # PipelineBuilder / presets, matching the Geny frontend's
    # provider-aware model picker recommended default. Pricing
    # tables retain the legacy id for historical billing rows.
    # cron extra pulls croniter for the scheduling daemon.
    "geny-executor[web,cron]>=1.3.3,<1.4.0",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # Auth
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
